[gd_scene load_steps=50 format=2]

[ext_resource path="res://Player/Kirby.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Health/pixil-frame-0.png" type="Texture" id=3]
[ext_resource path="res://Health/pixil-frame-0-2.png" type="Texture" id=4]
[ext_resource path="res://Health/heal_effect.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 260, 340, 65, 72 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 246, 69, 82 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 132, 160, 66, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 42, 37 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 46, 0, 42, 37 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 42, 37 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 264, 436, 66, 49 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 336, 62, 80 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 67, 336, 62, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 134, 336, 62, 80 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 201, 336, 62, 80 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2, 69, 59, 69 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 61, 69, 59, 69 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 69, 59, 69 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 179, 69, 59, 69 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 238, 69, 59, 69 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 297, 69, 59, 69 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 356, 69, 59, 69 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 415, 69, 59, 69 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 474, 69, 59, 69 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 533, 69, 59, 69 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "power-up",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 15.0

[sub_resource type="CircleShape2D" id=16]
radius = 17.0

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 50, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 100, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 50, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 100, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 150, 50, 50 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="ParticlesMaterial" id=42]
emission_shape = 5
emission_ring_radius = 70.0
emission_ring_inner_radius = 40.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_align_y = true
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -200.0
scale = 2.0

[sub_resource type="Gradient" id=43]
offsets = PoolRealArray( 0.195906, 0.95614 )
colors = PoolColorArray( 1, 0.553911, 0.862784, 1, 0.976875, 0.402729, 0.800269, 1 )

[sub_resource type="GradientTexture2D" id=44]
gradient = SubResource( 43 )
width = 1
height = 10
fill_from = Vector2( 0, 0.50974 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
position = Vector2( 149, 57 )
collision_mask = 14
script = ExtResource( 2 )

[node name="Player_anim" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "power-up"
frame = 4
playing = true

[node name="Player_collis" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 12 )

[node name="PlayerCam" type="Camera2D" parent="."]
current = true
limit_left = -302
limit_top = 0
limit_right = 2056
limit_bottom = 1048
limit_smoothed = true

[node name="Player_Area" type="Area2D" parent="."]

[node name="Area_Collis" type="CollisionShape2D" parent="Player_Area"]
position = Vector2( 0, -1 )
shape = SubResource( 16 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="hpBar" type="TextureProgress" parent="CanvasLayer"]
margin_left = 31.0
margin_top = 18.0
margin_right = 95.0
margin_bottom = 82.0
max_value = 5.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
fill_mode = 4

[node name="Heal_effect" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -7.62939e-06, -2 )
scale = Vector2( 2.78, 2.22 )
frames = SubResource( 41 )
frame = 1
playing = true

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 0.626785, 0.596822 )
amount = 40
speed_scale = 2.0
process_material = SubResource( 42 )
texture = SubResource( 44 )

[connection signal="area_entered" from="Player_Area" to="." method="_on_Player_Area_area_entered"]
[connection signal="body_entered" from="Player_Area" to="." method="_on_Player_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
